# rust-web-api

./: .example.env  .gitignore  Cargo.toml  LICENSE  db.sql  http.rest  readme.md
src/: main.rs
src/handlers/: department.rs  home.rs  mod.rs  user.rs
src/helpers/: mod.rs
src/models/: auth.rs  department.rs  mod.rs  user.rs
