[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0.145", features=["derive"]}
serde_json = "1.0.85"
dotenv = "0.15.0"
env_logger = "0.9.1"
log="0.4.17"
mysql="22.2.0"
# argon2rs="0.2.5"
# rand="0.8.5"
argon2rs = "0.2"
rand = "0.3"